Fix style and ip for openshift

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -7,6 +7,10 @@ p
 a
   color #00b7ff
 
+.spaced
+  margin-top: 40px
+  margin-bottom: 40px
+
 .jumbotron
   text-align center
   background-color transparent
